5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1601_1805.log
== TEST (2019-04-10 02:59:36) 
-- CODE:
xa=float(input("coordenada A1: ")
ya=float(input("coordenada A2: ")
xb=float(input("coordenada B1: ")
yb=float(input("coordenada B2: ")
xm=(xb+xa)/2
ym=(yb+ya)/2
print(round(xm,1))
print(round(ym,1))
-- ERROR:
File "XXXX", line 2
    ya=float(input()
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:00:51) 
-- CODE:
xa=float(input("coordenada A1: "))
ya=float(input("coordenada A2: "))
xb=float(input("coordenada B1: "))
yb=float(input("coordenada B2: "))
xm=(xb+xa)/2
ym=(yb+ya)/2
print(round(xm,1))
print(round(ym,1))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 03:00:51) 
-- CODE:
xa=float(input("coordenada A1: "))
ya=float(input("coordenada A2: "))
xb=float(input("coordenada B1: "))
yb=float(input("coordenada B2: "))
xm=(xb+xa)/2
ym=(yb+ya)/2
print(round(xm,1))
print(round(ym,1))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 03:01:31) 
-- CODE:
xa=float(input("coordenada A1: "))
ya=float(input("coordenada A2: "))
xb=float(input("coordenada B1: "))
yb=float(input("coordenada B2: "))
xm=(xb+xa)/2
ym=(yb+ya)/2
print(round(xm,1))
print(round(ym,1))
-- EXECUTION TIME:
0.157661
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
